--- a/html/visa-payment.html
+++ b/html/visa-payment.html
@@ -405,7 +405,7 @@
         <!-- End Google Tag Manager (noscript) -->
         <div class="container header-container">
             <div class="logo">
-                <a href="#">
+                <a href="https://www.teyzeevisas.com/">
                     <img src="/VisaImages/destinations/Teyzee_logo_240w_500h.jpeg" alt="TeyZee Visas Logo">
                 </a>
             </div>
